# traveltime-drive-time-comparisons

./: Czechia.csv  README.md  config.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
inputs/africa/: South_Africa.csv
inputs/asia/: India.csv  Japan.csv
inputs/australia/: New_South_Wales.csv  Northern_Territory.csv  Queensland.csv  South_Australia.csv  Tasmania.csv  Victoria.csv  Western_Australia.csv
inputs/canada/: Alberta.csv  British_Columbia.csv  Manitoba.csv  New_Brunswick.csv  Newfoundland_and_Labrador.csv  Nova_Scotia.csv  Ontario.csv  Quebec.csv  Saskatchewan.csv
inputs/europe/: Austria.csv  Belgium.csv  Czechia.csv  Finland.csv  France.csv  Germany.csv  Greece.csv  Hungary.csv  Italy.csv  Latvia.csv  Lithuania.csv  Netherlands.csv  Poland.csv  Portugal.csv  Romania.csv  Slovakia.csv  Slovenia.csv  Spain.csv  Sweden.csv  Turkey.csv  United_Kingdom.csv
inputs/south_america/: Mexico.csv
inputs/us/: Alabama.csv  Alaska.csv  Arizona.csv  Arkansas.csv  California.csv  Colorado.csv  Connecticut.csv  Delaware.csv  Florida.csv  Georgia.csv  Hawaii.csv  Idaho.csv  Illinois.csv  Indiana.csv  Iowa.csv  Kansas.csv  Kentucky.csv  Louisiana.csv  Maine.csv  Maryland.csv  Massachusetts.csv  Michigan.csv  Minnesota.csv  Mississippi.csv  Missouri.csv  Montana.csv  Nebraska.csv  Nevada.csv  New_Hampshire.csv  New_Jersey.csv  New_Mexico.csv  New_York.csv  North_Carolina.csv  North_Dakota.csv  Ohio.csv  Oklahoma.csv  Oregon.csv  Pennsylvania.csv  Rhode_Island.csv  South_Carolina.csv  (+10 more)
src/traveltime_drive_time_comparisons/: analysis.py  case_analysis.py  collect.py  common.py  config.py  main.py  outlier_detection.py  plot.py  snapping.py  tui.py
src/traveltime_drive_time_comparisons/accuracy_page/: README.md  __main__.py  aggregate.py
src/traveltime_drive_time_comparisons/accuracy_page_data/: README.md  __main__.py
src/traveltime_drive_time_comparisons/api_requests/: base_handler.py  factory.py  google_handler.py  google_handler_new.py  google_old_handler.py  here_handler.py  mapbox_handler.py  openroutes_handler.py  osrm_handler.py  tomtom_handler.py  traveltime_handler.py  valhalla_handler.py
src/traveltime_drive_time_comparisons/requests/: factory.py  google_handler.py  here_handler.py  mapbox_handler.py  openroutes_handler.py  osrm_handler.py  tomtom_handler.py  traveltime_handler.py  (+1 more)
src/traveltime_google_comparison/: collect.py  config.py
test/: test_accuracy_page.py  test_accuracy_page_data.py  test_analysis.py  test_case_analysis.py  test_collect.py  test_config.py  test_outlier_detection.py  test_snapping.py
test/api_requests/: test_google_handler.py  test_traveltime_handler.py
test/requests/: test_google_handler.py  test_traveltime_handler.py
(+2 files in other folders)
