[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "traveltime-drive-time-comparisons"
description = "Compare travel times obtained from TravelTime API other API providers"
authors = [
    { name = "TravelTime" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License"
]
dynamic = ["version"]
requires-python = ">= 3.9"
dependencies = [
    "aiohttp",
    "aiolimiter",
    "pandas",
    "numpy",
    "pytz",
    "PyQt5",
    "matplotlib",
    "traveltimepy>=4.0.0",
    "google-maps-routing",
]

[project.urls]
Homepage = "https://github.com/traveltime-dev/traveltime-drive-time-comparisons"

[project.optional-dependencies]
test = [
    "pytest",
    "flake8",
    "flake8-pyproject",
    "mypy",
    "black",
]

[project.scripts]
traveltime_drive_time_comparisons = "traveltime_drive_time_comparisons.main:main"

[tool.setuptools_scm]
