[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "traveltime-drive-time-comparisons"
description = "Compare travel times obtained from TravelTime API other API providers"
authors = [
    { name = "TravelTime" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License"
]
dynamic = ["version"]
requires-python = ">= 3.9"
dependencies = [
    "aiohttp>=3.13.3",
    "aiolimiter>=1.2.1",
    "pandas>=2.0.0",
    "numpy>=2.0.0",
    "pytz>=2025.2",
    "PyQt5>=5.15.11",
    "matplotlib>=3.7.0",
    "traveltimepy>=4.0.0",
    "questionary>=2.1.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/traveltime-dev/traveltime-drive-time-comparisons"

[project.optional-dependencies]
test = [
    "pytest",
    "flake8",
    "flake8-pyproject",
    "mypy",
    "black",
]

[project.scripts]
traveltime_drive_time_comparisons = "traveltime_drive_time_comparisons.main:main"
traveltime_drive_time_comparisons_tui = "traveltime_drive_time_comparisons.tui:main"

[tool.setuptools_scm]
